[metadata]
name = mlkernels
version = 0.1.0
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Kernels, the machine learning ones
url = https://github.com/wesselb/mlkernels
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown